Move all database logic to DatabaseHandler.